feat: add header

--- a/index.html
+++ b/index.html
@@ -7,19 +7,39 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <div class="container first-section">
-
+  <div class="container">
+    <div class="first-section">
+      <div class="wrapper">
+        <header class="header">
+          <span class="header__logo">
+            rich<span class="header__logo_text"> insta </span>feed
+          </span>
+          <nav class="header__nav">
+            <ul class="nav__list">
+              <li class="nav__list-item">
+                <a class="nav__list-link">О сервисе</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__list-link">Сценарии</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__list-link">FAQ</a>
+              </li>
+              <li class="nav__list-item">
+                <a class="nav__list-link">Регистрация</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+      </div>
     </div>
-    <div class="container second-section">
-
+    <div class="second-section">
     </div>
-    <div class="container third-section">
-
+    <div class="third-section">
     </div>
-    <div class="container fourth-section">
-      
+    <div class="fourth-section">
     </div>
+    
   </div>
 </body>
 </html>
